[tool.poetry]
name = "nandtool"
version = "0.3.0"
description = "ECC correction for NAND flash"
authors = [
    "Francis Hoogendijk <f.hoogendijk@nfi.nl>",
    "Anda Knol <a.knol@nfi.nl>",
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetherlandsForensicInstitute/nandtool"
keywords = ["ecc", "nand"]
packages = [{ include = "nandtool" }, { include = "tests" }]


[tool.poetry.dependencies]
python = "^3.8"
crcmod = "^1.7"
fusepy = "^3.0.1"
pytest = "^7.2.1"
bchlib = "1.0.0"
dynaconf = "^3.1.11"
numpy = "^1.24.2"
tqdm = "^4.64.1"


[tool.poetry.group.test.dependencies]
pytest = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
